--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
-#Porta do servidor
-server.port = 8080
-
-# Caminho do banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/mercadinho
-
-# Usuário e senha do banco de dados
-spring.datasource.username=postgres
-spring.datasource.password=123456
-
-# Nome do driver
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Configuração do Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
