--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
     		<version>3.1.4</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
+    		<version>3.1.2</version>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
